--- a/style/main.css
+++ b/style/main.css
@@ -1,4 +1,78 @@
-.pink {
-  background-color: brown;
-  width: 100px;
-  height: 100px; }
+/* http://meyerweb.com/eric/tools/css/reset/ 
+   v2.0 | 20110126
+   License: none (public domain)
+*/
+html, body, div, span, applet, object, iframe, h1, h2, h3, h4, h5, h6, p, blockquote, pre, a, abbr, acronym, address, big, cite, code, del, dfn, em, img, ins, kbd, q, s, samp, small, strike, strong, sub, sup, tt, var, b, u, i, center, dl, dt, dd, ol, ul, li, fieldset, form, label, legend, table, caption, tbody, tfoot, thead, tr, th, td, article, aside, canvas, details, embed, figure, figcaption, footer, header, hgroup, menu, nav, output, ruby, section, summary, time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
+
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after {
+  content: '';
+  content: none; }
+
+q:before, q:after {
+  content: '';
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+a {
+  text-decoration: none; }
+
+* {
+  box-sizing: border-box; }
+
+.body {
+  width: 100%;
+  height: 100%;
+  background-image: linear-gradient(-90deg, #aba0b6, #93afbe); }
+
+.full-view {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-content: center; }
+  .full-view .header-ul {
+    display: flex;
+    width: 50%;
+    margin-top: 35px; }
+    .full-view .header-ul .header-li {
+      font-weight: bold;
+      font-size: 20px;
+      margin-right: 200px; }
+      .full-view .header-ul .header-li .header-a {
+        color: black; }
+        .full-view .header-ul .header-li .header-a:hover {
+          color: #e9dfdf; }
+    .full-view .header-ul .header-li3 {
+      font-weight: bold;
+      font-size: 20px; }
+      .full-view .header-ul .header-li3 .header-a {
+        color: black; }
+        .full-view .header-ul .header-li3 .header-a:hover {
+          color: #e9dfdf; }
+
+.header-img {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-top: 9%; }
